<resources>
    <string name="app_name">Boost ctRL</string>

    <string name="teams">Teams</string>
    <string name="matches">Matches</string>
    <string name="news">News</string>
    <string name="competitions">Competitions</string>
    <string name="info">Info</string>
    <string name="person">Person</string>
    <string name="team_detail">Team Detail</string>
    <string name="competition_detail">Competition Detail</string>
    <string name="match_detail">Match Detail</string>
    <string name="match_details">Match Details</string>
    <string name="news_article">News - %s</string>

    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="article_image">Article image</string>
    <string name="team_image">Team image</string>
    <string name="last_updated_at">Last updated: %s</string>
    <string name="rankings_info_dialog_title">Rankings</string>
    <string name="versus">vs.</string>
    <string name="home_team_logo">Home team logo</string>
    <string name="away_team_logo">Away team logo</string>
    <string name="tournament_logo">Tournament logo</string>
    <string name="team_logo">Team logo</string>

    <string name="birthdate">Birthdate</string>
    <string name="age">age %s</string>
    <string name="country">Country</string>
    <string name="current_team">Current Team</string>
    <string name="role">Role</string>
    <string name="socials">Socials</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="nickname">Nickname</string>
    <string name="approximate_total_earnings">Approx. Total Earnings</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="starting_game">Starting Game</string>
    <string name="liquipedia_rating">Liquipedia Rating</string>

    <string name="sponsors">Sponsors</string>
    <string name="created_at">Created at</string>
    <string name="region">Region</string>
    <string name="manager">Manager</string>
    <string name="location">Location</string>
    <string name="roster">Roster</string>
    <string name="rosters">Rosters</string>
    <string name="country_flag">Country flag</string>
    <string name="general_details">General details</string>
    <string name="series">Series</string>
    <string name="organizer">Organizer</string>
    <string name="mode">Mode</string>
    <string name="competition_type">Competition Type</string>
    <string name="venue">Venue</string>
    <string name="prize_pool">Prize Pool</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="number_of_teams">Number of Teams</string>
    <string name="other">Other</string>
    <string name="premier">Premier</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="standings">Standings</string>
    <string name="date_when">When</string>
    <string name="event">Event</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="notify_me">Notify me</string>
    <string name="competition_image">Competition image</string>
    <string name="live">Live</string>
    <string name="choose_bracket">Choose Bracket</string>
    <string name="select">Select:</string>

    <!-- FCM / Notification -->
    <string name="fcm_topic">boost-ctrl</string>
    <string name="fcm_news_notification_channel_id">ba860250-c40d-4853-af9c-e194a20da276</string>
    <string name="in_app_channel_id">17f8f5fe-cfc3-44f7-aaef-79ec5bb83a93</string>
    <string name="in_app_channel_name">Boost-ctRL Notifications</string>
    <string name="in_app_channel_description">Unspecific common in app notifications</string>
    <string name="competition_brackets">Competition Brackets</string>
    <string name="brackets">Brackets</string>
    <string name="container">Container</string>
    <string name="section">Section</string>
    <string name="chose_section">Chose section</string>
    <string name="chose_container">Chose container</string>

</resources>
