<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_rocket_white"
        android:title="@string/teams"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_calendar_white"
        android:title="@string/matches"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_white"
        android:title="@string/news"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_standings"
        android:icon="@drawable/ic_standings_white"
        android:title="@string/standings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_more_white"
        android:title="@string/info"
        app:showAsAction="ifRoom" />

</menu>
