<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_teams"
        android:name="pt.cosmik.boostctrl.ui.teams.TeamsFragment"
        android:label="@string/teams"
        tools:layout="@layout/fragment_teams"/>

    <fragment
        android:id="@+id/navigation_matches"
        android:name="pt.cosmik.boostctrl.ui.matches.MatchesFragment"
        android:label="@string/matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="pt.cosmik.boostctrl.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_competitions"
        android:name="pt.cosmik.boostctrl.ui.competitions.CompetitionsFragment"
        android:label="@string/competitions"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="pt.cosmik.boostctrl.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/news_item_detail_fragment"
        android:name="pt.cosmik.boostctrl.ui.news.detail.NewsDetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_news_detail" >
        <argument
            android:name="newsItem"
            app:argType="pt.cosmik.boostctrl.models.NewsItem"
            app:nullable="true"/>
        <argument
            android:name="newsItemId"
            app:argType="string"
            app:nullable="true"/>
    </fragment>

    <fragment
        android:id="@+id/person_fragment"
        android:name="pt.cosmik.boostctrl.ui.person.PersonFragment"
        android:label="@string/person"
        tools:layout="@layout/fragment_person">
        <argument
            android:name="person"
            app:argType="pt.cosmik.boostctrl.models.Person"
            app:nullable="true" />
    </fragment>
    <action
        android:id="@+id/action_global_person_fragment"
        app:destination="@id/person_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:exitAnim="@android:anim/slide_out_right"
        app:popEnterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right" />

    <fragment
        android:id="@+id/team_detail_fragment"
        android:name="pt.cosmik.boostctrl.ui.teams.detail.TeamFragment"
        android:label="@string/team_detail"
        tools:layout="@layout/fragment_team_detail">
        <argument
            android:name="team"
            app:argType="pt.cosmik.boostctrl.models.Team"
            app:nullable="true" />
    </fragment>
    <action
        android:id="@+id/action_global_team_detail_fragment"
        app:destination="@id/team_detail_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:exitAnim="@android:anim/slide_out_right"
        app:popEnterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right" />
    <action
        android:id="@+id/action_global_news_item_detail_fragment"
        app:destination="@id/news_item_detail_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:exitAnim="@android:anim/slide_out_right"
        app:popEnterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right"/>

    <fragment
        android:id="@+id/competition_detail_fragment"
        android:name="pt.cosmik.boostctrl.ui.competitions.detail.CompetitionFragment"
        android:label="@string/competition_detail"
        tools:layout="@layout/fragment_competition_detail">
        <argument
            android:name="competition"
            app:argType="pt.cosmik.boostctrl.models.Competition"
            app:nullable="true" />
        <action
            android:id="@+id/action_competition_detail_fragment_to_brackets_fragment2"
            app:destination="@id/brackets_fragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <action
        android:id="@+id/action_global_competition_detail_fragment"
        app:destination="@id/competition_detail_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:exitAnim="@android:anim/slide_out_right"
        app:popEnterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right" />

    <fragment
        android:id="@+id/match_detail_fragment"
        android:name="pt.cosmik.boostctrl.ui.matches.detail.MatchFragment"
        android:label="@string/match_detail"
        tools:layout="@layout/fragment_match_detail">
        <argument
            android:name="match"
            app:argType="pt.cosmik.boostctrl.models.UpcomingMatch"
            app:nullable="true" />
    </fragment>
    <action
        android:id="@+id/action_global_match_detail_fragment"
        app:destination="@id/match_detail_fragment"
        app:enterAnim="@android:anim/slide_in_left"
        app:exitAnim="@android:anim/slide_out_right"
        app:popEnterAnim="@android:anim/slide_in_left"
        app:popExitAnim="@android:anim/slide_out_right"/>

    <fragment
        android:id="@+id/brackets_fragment"
        android:name="pt.cosmik.boostctrl.external.tournament_brackets.Fragment.BracketsFragment"
        android:label="@string/brackets"
        tools:layout="@layout/fragment_brackets" >
        <argument
            android:name="competitionId"
            app:argType="string" />
    </fragment>

</navigation>