<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:paddingStart="@dimen/space_between_m"
    android:paddingEnd="@dimen/space_between_m"
    android:paddingTop="@dimen/space_between_s"
    android:paddingBottom="@dimen/space_between_s"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    tools:background="@color/colorPickledBluewood">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFiord">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_vertical_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/text_date_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="@dimen/text_size_10_pt"
            android:textColor="@color/colorCloudWhite"
            android:layout_marginStart="@dimen/space_between_s"
            android:layout_marginTop="@dimen/space_between_xs"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="4h 27m 11s"/>

        <TextView
            android:id="@+id/text_versus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorCloudWhite"
            android:text="@string/versus"
            android:textSize="@dimen/text_size_12_pt"
            app:layout_constraintStart_toStartOf="@id/center_vertical_guide"
            app:layout_constraintEnd_toEndOf="@id/center_vertical_guide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/image_view_home_team"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_between_m"
            android:contentDescription="@string/home_team_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_versus"
            tools:src="@drawable/common_full_open_on_phone" />

        <TextView
            android:id="@+id/text_home_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIceberg"
            android:textSize="@dimen/text_size_14_pt"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_view_home_team"
            tools:text="AER"/>

        <ImageView
            android:id="@+id/image_view_away_team"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_between_m"
            android:contentDescription="@string/away_team_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_versus"
            tools:src="@drawable/common_full_open_on_phone"/>

        <TextView
            android:id="@+id/text_away_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIceberg"
            android:textSize="@dimen/text_size_14_pt"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_away_team"
            tools:text="AER"/>

        <ImageView
            android:id="@+id/image_view_tournament"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/space_between_s"
            android:layout_marginBottom="@dimen/space_between_xs"
            android:contentDescription="@string/tournament_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_tournament_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/common_full_open_on_phone" />

        <TextView
            android:id="@+id/text_tournament_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_10_pt"
            android:textColor="@color/colorCloudWhite"
            android:layout_marginBottom="@dimen/space_between_xs"
            android:layout_marginEnd="@dimen/space_between_xs"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_view_tournament"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="RSSL - Season 2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>